--- a/Enigma/Enigma.csproj
+++ b/Enigma/Enigma.csproj
@@ -71,6 +71,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Config.cs" />
     <Compile Include="DbConnection.cs" />
     <Compile Include="Enigma.cs">
       <SubType>Form</SubType>
